Kubernetes/DocsDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: docs
  name: docs
  namespace: docs
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      run: docs
  template:
    metadata:
      labels:
        run: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/ninepiece2/docs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  namespace: docs
spec:
  selector:
    run: docs
  ports:
    - name: https
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-ingress
  namespace: docs
spec:
  ingressClassName: haproxy
  rules:
    - host: docs.romitsagu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-service
                port:
                  number: 80
